syntax = "proto3";
package cosmonaut.bzedgev5.scavenge;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "scavenge/scavenge.proto";
import "scavenge/commit.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/bzedgev5/x/scavenge/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a scavenge by index.
	rpc Scavenge(QueryGetScavengeRequest) returns (QueryGetScavengeResponse) {
		option (google.api.http).get = "/cosmonaut/bzedgev5/scavenge/scavenge/{index}";
	}

	// Queries a list of scavenge items.
	rpc ScavengeAll(QueryAllScavengeRequest) returns (QueryAllScavengeResponse) {
		option (google.api.http).get = "/cosmonaut/bzedgev5/scavenge/scavenge";
	}

// Queries a commit by index.
	rpc Commit(QueryGetCommitRequest) returns (QueryGetCommitResponse) {
		option (google.api.http).get = "/cosmonaut/bzedgev5/scavenge/commit/{index}";
	}

	// Queries a list of commit items.
	rpc CommitAll(QueryAllCommitRequest) returns (QueryAllCommitResponse) {
		option (google.api.http).get = "/cosmonaut/bzedgev5/scavenge/commit";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetScavengeRequest {
	  string index = 1;

}

message QueryGetScavengeResponse {
	Scavenge scavenge = 1 [(gogoproto.nullable) = false];
}

message QueryAllScavengeRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllScavengeResponse {
	repeated Scavenge scavenge = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCommitRequest {
	  string index = 1;

}

message QueryGetCommitResponse {
	Commit commit = 1 [(gogoproto.nullable) = false];
}

message QueryAllCommitRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCommitResponse {
	repeated Commit commit = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
